# python-boilerplate

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst
sample/: __init__.py  main.py
tests/: test_sample.py
